--- a/TenantPortal/WebContent/tenantAdmin.xhtml
+++ b/TenantPortal/WebContent/tenantAdmin.xhtml
@@ -6,30 +6,48 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
-	<script type="text/javascript"
-		src="#{request.contextPath}/resources/js/waystoneTenant.js"></script>
-	<title>Home</title>
 	<h:outputStylesheet library="css" name="waystoneTenant.css" />
+	<title>Home</title>
+
 </h:head>
 <h:body>
 	<ui:composition template="templates/commonTemplate.html">
 		<ui:define name="content">
 			<h:form id="form">
 				<div class="empInfo">
-					<h1 class="pageTitle">Home</h1>
 					<ui:repeat value="#{tenant.getTenantRecord()}" var="ten">
-						<h3 id="welcome">Welcome Tenant</h3>
-						<br></br>
-						<h:outputText value="#{ten.firstName} #{ten.lastName}"
-							class="empInfo" />
+							<h:outputText value="WELCOME HOME #{ten.firstName} #{ten.lastName}!" />
+						<!-- <h1 class="pageTitle">Home</h1>
+						<h3 class="centerAlign" id="Welcome">Welcome Home</h3> -->
 
-						<h:panelGrid columns="2">
-							<h:outputLabel value="Current Balance Due: 	$" />
-							<h:outputLabel
-								value="#{tenant.getTenantRecordBalance(tenantProfObj.tenantID)}" />
-						</h:panelGrid>
+
+						<h3 class="centerAlign">Past Payments</h3>
+						<!-- <h:outputLabel value="Current Balance Due: 	$" />
+						<h:outputLabel
+							value="#{tenant.getTenantRecordBalance(tenantProfObj.tenantID)}" /> -->
+
+						<h:dataTable id="paymentTable"
+							value="#{tenant.getTenantAcctRecords(tenantProfObj.tenantID)}"
+							var="pay" styleClass="table" headerClass="table-header"
+							rowClasses="table-odd, table-even"
+							columnClasses="paymentDate, recordName, recordAmount">
+							<h:column>
+								<f:facet name="header">Date</f:facet>
+								<h:commandLink value="#{pay.recordDate}" class="table-link" />
+							</h:column>
+							<h:column>
+								<f:facet name="header">Adjustment Type</f:facet>
+								<h:commandLink value="#{pay.recordName}" class="table-link" />
+							</h:column>
+							<h:column>
+								<f:facet name="header">Amount</f:facet>
+								<h:commandLink value="#{pay.recordAmount}" class="table-link" />
+							</h:column>
+						</h:dataTable>
+						<br></br>
 						<br></br>
 
+						<h3 class="centerAlign">Past Maintenance Requests</h3>
 						<h:dataTable id="maintenanceTable"
 							value="#{tenant.getTenantMaint(tenantProfObj.tenantID)}"
 							var="maint" styleClass="table" headerClass="table-header"
@@ -52,28 +70,6 @@
 								<h:commandLink value="#{maint.maintDate}" class="table-link" />
 							</h:column>
 						</h:dataTable>
-						<br></br>
-						<br></br>
-
-						<h:dataTable id="paymentTable"
-							value="#{tenant.getTenantAcctRecords(tenantProfObj.tenantID)}"
-							var="pay" styleClass="table" headerClass="table-header"
-							rowClasses="table-odd, table-even"
-							columnClasses="paymentDate, recordName, recordAmount">
-							<h:column>
-								<f:facet name="header">Date</f:facet>
-								<h:commandLink value="#{pay.recordDate}" class="table-link" />
-							</h:column>
-							<h:column>
-								<f:facet name="header">Adjustment Type</f:facet>
-								<h:commandLink value="#{pay.recordName}" class="table-link" />
-							</h:column>
-							<h:column>
-								<f:facet name="header">Amount</f:facet>
-								<h:commandLink value="#{pay.recordAmount}" class="table-link" />
-							</h:column>
-						</h:dataTable>
-
 
 					</ui:repeat>
 				</div>
