correct login lock, start rendering header

--- a/EmployeeLogin/WebContent/companyInfo.xhtml
+++ b/EmployeeLogin/WebContent/companyInfo.xhtml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!DOCTYPE html>
+<!--
+ * CSCI 2999 Capstone Project
+ * Waystone Property Management Intranet
+ * @author KWelzbacher 
+ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h = "http://java.sun.com/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
-        <title>Company Information</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>Company Information</title>
     </h:head>
     <h:body>
         <ui:composition template="templates/commonTemplate.xhtml">
@@ -136,7 +141,7 @@
                     		</tr>
                     		<tr>
                     			<td>Los Angeles, CA 90066</td>
-                    			<td>os Angeles, CA 90230</td>
+                    			<td>Los Angeles, CA 90230</td>
                     			<td>Los Angeles, CA 90291</td>
                     		</tr>
                     		<tr>
