--- a/EmployeeLogin/WebContent/editUnit.xhtml
+++ b/EmployeeLogin/WebContent/editUnit.xhtml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!DOCTYPE html>
+<!--
+ * CSCI 2999 Capstone Project
+ * Waystone Property Management Intranet
+ * @author KWelzbacher 
+ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h = "http://java.sun.com/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
@@ -49,7 +54,7 @@
                         <h:outputText value="City:  " />
                         <h:inputText id="unitObjCity" value="#{unitViewObj.unitCity}" required= "true" requiredMessage ="City is required"
                                      validatorMessage="Incorrect City" size="12">
-                            <f:validateRegex pattern="[a-zA-Z]+"/>
+                            <f:validateRegex pattern="[a-zA-Z\s-]+"/>
                         </h:inputText>
                         <h:outputText value="State:  " />
                             <h:selectOneMenu id="unitObjState" value="#{unitViewObj.unitState}" required = "true" requiredMessage = "State is required">
