--- a/EmployeeLogin/WebContent/maintenanceRequests.xhtml
+++ b/EmployeeLogin/WebContent/maintenanceRequests.xhtml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!DOCTYPE html>
+<!--
+ * CSCI 2999 Capstone Project
+ * Waystone Property Management Intranet
+ * @author KWelzbacher 
+ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h = "http://java.sun.com/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
@@ -38,7 +43,7 @@
                     <h3 class="pageTitle">Open Requests</h3>
                     <h:dataTable value="#{maintenance.maintenanceSearch}" var="req"
                                  styleClass = "table" headerClass="table-header" rowClasses="table-odd,table-even"
-                                 columnClasses="requestID, tenantID, building, apt, jobType, jobDesc, date">
+                                 columnClasses="requestID, tenantID, building, apt, jobType, jobDesc, dateR, started, startDate, reqDone">
                         <h:column> 
                         <f:facet name="header">Request ID</f:facet>
                         <h:outputText value="#{req.requestID}"/>
@@ -52,7 +57,7 @@
                         <h:outputText value="#{req.building}"/>
                     </h:column>
                     <h:column> 
-                        <f:facet name="header">Apartment Number</f:facet>
+                        <f:facet name="header">Apartment No.</f:facet>
                         <h:outputText value="#{req.aptNum}"/>
                     </h:column>
                     <h:column> 
@@ -84,7 +89,7 @@
                     <h3 class="pageTitle">Assigned Requests</h3>
                     <h:dataTable value="#{maintenance.getCurrentEmpMainList(empRecordObj.employeeID)}" var="current"
                                  styleClass = "table" headerClass="table-header" rowClasses="table-odd,table-even"
-                                 columnClasses="requestID, tenantID, building, apt, jobType, jobDesc, date">
+                                 columnClasses="requestID, tenantID, building, apt, jobType, jobDesc, dateR, startDate, removeReq">
                         <h:column> 
                         <f:facet name="header">Request ID</f:facet>
                         <h:outputText value="#{current.requestID}"/>
@@ -98,7 +103,7 @@
                         <h:outputText value="#{current.building}"/>
                     </h:column>
                     <h:column> 
-                        <f:facet name="header">Apartment Number</f:facet>
+                        <f:facet name="header">Apartment No.</f:facet>
                         <h:outputText value="#{current.aptNum}"/>
                     </h:column>
                     <h:column> 
@@ -131,7 +136,7 @@
                     <h3 class="pageTitle">Finished Requests</h3>
                     <h:dataTable value="#{maintenance.getDoneEmpMainList(empRecordObj.employeeID)}" var="done"
                                  styleClass = "table" headerClass="table-header" rowClasses="table-odd,table-even"
-                                 columnClasses="requestID, tenantID, building, apt, jobType, jobDesc, date">
+                                 columnClasses="requestID, tenantID, building, apt, jobType, jobDesc, finishR">
                         <h:column> 
                         <f:facet name="header">Request ID</f:facet>
                         <h:outputText value="#{done.requestID}"/>
@@ -145,7 +150,7 @@
                         <h:outputText value="#{done.building}"/>
                     </h:column>
                     <h:column> 
-                        <f:facet name="header">Apartment Number</f:facet>
+                        <f:facet name="header">Apartment No.</f:facet>
                         <h:outputText value="#{done.aptNum}"/>
                     </h:column>
                     <h:column> 
