--- a/EmployeeLogin/WebContent/viewUnit.xhtml
+++ b/EmployeeLogin/WebContent/viewUnit.xhtml
@@ -71,7 +71,7 @@
                             
                             
                             <div class="edit">    
-                                <h:commandButton value="Edit Unit Information" action="editUnit" rendered="#{empRoleObj.role eq 'ADMIN' or empRoleObj.role eq 'ACCOUNTS'}"/>
+                                <h:commandButton value="Edit Unit Information" action="editUnit" rendered="#{empRoleObj.role eq 'ADMIN' or empRoleObj.role eq 'ACCOUNTS' or empRoleObj.role eq 'OFFICE'  or empRoleObj.role eq 'HR'}"/>
                             </div>
                             <br/><br/>
                             <div class="delete">
