--- a/EmployeeLogin/WebContent/viewTenant.xhtml
+++ b/EmployeeLogin/WebContent/viewTenant.xhtml
@@ -75,15 +75,15 @@
                                 
                             </h:panelGrid>
                             
-                            <h:commandButton value="Edit Tenant Information" action="tenantProfileEdit" rendered="#{empRoleObj.role eq 'ADMIN' or empRoleObj.role eq 'ACCOUNTS'}" />
+                            <h:commandButton value="Edit Tenant Information" action="tenantProfileEdit" rendered="#{empRoleObj.role eq 'ADMIN' or empRoleObj.role eq 'ACCOUNTS'  or empRoleObj.role eq 'OFFICE'}" />
                             <br/><br/>
-                            <h:commandButton value="Delete Tenant" action="#{tenant.deleteTenant(tenantViewObj)}" class="confirmTenant" rendered="#{empRoleObj.role eq 'ADMIN' or empRoleObj.role eq 'ACCOUNTS'}"/>
+                            <h:commandButton value="Delete Tenant" action="#{tenant.deleteTenant(tenantViewObj)}" class="confirmTenant" rendered="#{empRoleObj.role eq 'ADMIN' or empRoleObj.role eq 'OFFICE'}"/>
                         </div>
                     </div>
-					<h:outputText class="pageTitle" rendered="#{empRecordObj.role eq 'ADMIN' or empRecordObj.role eq 'ACCOUNTS'}" value="Tenant Records" />
+					<div class="recTitle"><h:outputText value="Tenant Records" rendered="#{empRoleObj.role eq 'ADMIN' or empRoleObj.role eq 'ACCOUNTS' or empRoleObj.role eq 'OFFICE'}" /></div>
                     <h:dataTable id="tenRecTable" value="#{record.getTenantAccRecords(tenantViewObj.tenantID)}"  var="tenRecordsObj"
                                  styleClass="table" headerClass="table-header" rowClasses="table-odd, table-even"
-                                 columnClasses="date, name, recordNum, amount" rendered="#{empRoleObj.role eq 'ADMIN' or empRoleObj.role eq 'ACCOUNTS'}">
+                                 columnClasses="date, name, recordNum, amount" rendered="#{empRoleObj.role eq 'ADMIN' or empRoleObj.role eq 'ACCOUNTS' or empRoleObj.role eq 'OFFICE'}">
                             <h:column> 
                                 <f:facet name="header">Record Date</f:facet>
                             <h:commandLink value="#{tenRecordsObj.recordDate}" action="#{record.viewIndivRecord(tenRecordsObj.recordID)}" class="table-link"/>
