--- a/TenantPortal/WebContent/TenantEditPayment.xhtml
+++ b/TenantPortal/WebContent/TenantEditPayment.xhtml
@@ -11,7 +11,7 @@
 	<h:outputStylesheet library="css" name="waystoneTenant.css" />
 </h:head>
 <body>
-	<ui:composition template="templates/commonTemplate.html">
+	<ui:composition template="templates/commonTemplate.xhtml">
 		<ui:define name="content">
 			<h:form id="form">
 				<div class="empInfo">
