--- a/TenantPortal/WebContent/TenantMaintenanceConfirmation.xhtml
+++ b/TenantPortal/WebContent/TenantMaintenanceConfirmation.xhtml
@@ -10,7 +10,7 @@
 	<h:outputStylesheet library="css" name="waystoneTenant.css" />
 </h:head>
 <body>
-	<ui:composition template="templates/commonTemplate.html">
+	<ui:composition template="templates/commonTemplate.xhtml">
 		<ui:define name="content">
 			<h:form>
 				<h3>Maintenance Confirmation</h3>
