--- a/TenantPortal/WebContent/index.xhtml
+++ b/TenantPortal/WebContent/index.xhtml
@@ -5,12 +5,18 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <h:head>
 	<h:outputStylesheet name="waystoneTenant.css" library="css" />
+	<link rel="icon" type ="image/x-icon" href="#{resources['images/Way1.png']}"/>
 	<title>Tenant Portal Login</title>
 </h:head>
-<h:body id="loginBackground">
+<h:body class="tenantBack">
 	<h:form id="loginForm">
-
-		<div class="title" id="loginTitle">Waystone Property Management</div>
+		
+		<div id="loginTop">
+			<div>
+				<img src="images/Way1.png" alt="WPM Logo" class="topLogo" />
+			</div>
+			<div class="title" id="loginTitle">Waystone Property Management</div>
+		</div>
 
 		<div class="shadowBox">
 			<h1>Tenant Login</h1>
