--- a/TenantPortal/WebContent/tenantAdmin.xhtml
+++ b/TenantPortal/WebContent/tenantAdmin.xhtml
@@ -6,22 +6,21 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
-	<h:outputStylesheet library="css" name="waystoneTenant.css" />
 	<title>Home</title>
-
 </h:head>
 <h:body>
-	<ui:composition template="templates/commonTemplate.html">
+	<ui:composition template="templates/commonTemplate.xhtml">
 		<ui:define name="content">
 			<h:form id="form">
 				<div class="empInfo">
 					<ui:repeat value="#{tenant.getTenantRecord()}" var="ten">
-							<h:outputText value="WELCOME HOME #{ten.firstName} #{ten.lastName}!" />
+						<h:outputText
+							value="WELCOME HOME #{ten.firstName} #{ten.lastName}!" />
 						<!-- <h1 class="pageTitle">Home</h1>
 						<h3 class="centerAlign" id="Welcome">Welcome Home</h3> -->
 
 
-						<h3 class="centerAlign">Past Payments</h3>
+						<h3 class="centerAlign">Your Account Balance</h3>
 						<!-- <h:outputLabel value="Current Balance Due: 	$" />
 						<h:outputLabel
 							value="#{tenant.getTenantRecordBalance(tenantProfObj.tenantID)}" /> -->
@@ -47,7 +46,7 @@
 						<br></br>
 						<br></br>
 
-						<h3 class="centerAlign">Past Maintenance Requests</h3>
+						<h3 class="centerAlign">Your Maintenance Requests</h3>
 						<h:dataTable id="maintenanceTable"
 							value="#{tenant.getTenantMaint(tenantProfObj.tenantID)}"
 							var="maint" styleClass="table" headerClass="table-header"
