--- a/TenantPortal/WebContent/TenantEditPassword.xhtml
+++ b/TenantPortal/WebContent/TenantEditPassword.xhtml
@@ -11,31 +11,35 @@
 	<h:outputStylesheet library="css" name="waystoneTenant.css" />
 </h:head>
 <body>
-	<ui:composition template="templates/commonTemplate.html">
+	<ui:composition template="templates/commonTemplate.xhtml">
 		<ui:define name="content">
 			<h:form id="form">
 				<div class="empInfo">
 					<h3 class="pageTitle">Edit Password</h3>
-					<div class="profileBox">
+					<div class="editBox" id="editPass">
 
-						<h:panelGrid class="editInfo" columns="3">
+						<h:panelGrid class="editInfo" columns="2">
 
 							<h:outputLabel value="Email:  " />
 							<h:outputText id="email" value="#{tenantProfObj.email}" />
-							<h:message for="email" style="color:red;" />
+
 
 							<h:outputLabel for="password" value="Password:  " />
 							<h:inputSecret id="password" value="#{tenant.pwd}"
 								required="true" requiredMessage="Please enter a new password">
-								<f:validator binding="#{passwordValidator}"
-									validatorId="passwordValidator" />
+								<f:validator binding="#{passwordValidator}" validatorId = "passwordValidator" />
 								<f:attribute name="confirm" value="#{confirm}" />
 							</h:inputSecret>
-							<h:message for="password" style="color:red;" />
 
 							<h:outputLabel for="confirm" value="Confirm Password:  " />
-							<h:inputSecret id="confirm" binding="#{confirm}" required="true"
-								requiredMessage="Please re-enter new password" />
+							 <h:inputSecret id="confirm" binding="#{confirm}" required="true" requiredMessage = "Please re-enter new password" validatorMessage="Please enter password with at least 8 characters, one uppercase letter, one lowercase letter, and one digit."> 
+								<f:validateRegex pattern="\A(?=\S*?[0-9])(?=\S*?[a-z])(?=\S*?[A-Z])\S{8,}\z" />
+							</h:inputSecret>
+						</h:panelGrid>
+
+						<h:panelGrid columns="1">
+							<h:message for="email" style="color:red;" />
+							<h:message for="password" style="color:red;" />
 							<h:message for="confirm" style="color:red;" />
 						</h:panelGrid>
 
