inventory search working

--- a/EmployeeLogin/WebContent/insertTenant.xhtml
+++ b/EmployeeLogin/WebContent/insertTenant.xhtml
@@ -24,7 +24,7 @@
 
             <ui:define name="content">
                 
-                <h:form id="form">
+                <h:form id="createTenForm">
                     <div class="empInfo" >
                     <h3 class="pageTitle">Create New Tenant </h3>
                     <div class="editBox">
